maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:39: error: ';' expected but ')' found.
    isFacingWall()) {
                  ^